target/generated-sources/antlr4/parser/GrammarParser.java
// Generated from Grammar.g4 by ANTLR 4.4
package parser;

	import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__37=1, T__36=2, T__35=3, T__34=4, T__33=5, T__32=6, T__31=7, T__30=8, 
		T__29=9, T__28=10, T__27=11, T__26=12, T__25=13, T__24=14, T__23=15, T__22=16, 
		T__21=17, T__20=18, T__19=19, T__18=20, T__17=21, T__16=22, T__15=23, 
		T__14=24, T__13=25, T__12=26, T__11=27, T__10=28, T__9=29, T__8=30, T__7=31, 
		T__6=32, T__5=33, T__4=34, T__3=35, T__2=36, T__1=37, T__0=38, INT=39, 
		FLOAT=40, IDENT=41, LINE_COMMENT=42, MULTILINE_COMMENT=43, WHITESPACE=44, 
		CHAR=45;
	public static final String[] tokenNames = {
		"<INVALID>", "'/'", "'char'", "'return'", "'!='", "'float'", "'||'", "'while'", 
		"';'", "'{'", "'&&'", "'='", "'}'", "'if'", "'<='", "'printsp'", "'int'", 
		"'print'", "'('", "'*'", "','", "'.'", "'var'", "'println'", "':'", "'>='", 
		"'['", "'=='", "'<'", "']'", "'>'", "'!'", "'%'", "'else'", "'read'", 
		"')'", "'+'", "'struct'", "'-'", "INT", "FLOAT", "IDENT", "LINE_COMMENT", 
		"MULTILINE_COMMENT", "WHITESPACE", "CHAR"
	};
	public static final int
		RULE_start = 0, RULE_global = 1, RULE_func = 2, RULE_defineFuncParams = 3, 
		RULE_defineFuncParamsList = 4, RULE_passFuncParams = 5, RULE_passFuncParamsList = 6, 
		RULE_structField = 7, RULE_varDef = 8, RULE_statement = 9, RULE_expression = 10, 
		RULE_type = 11;
	public static final String[] ruleNames = {
		"start", "global", "func", "defineFuncParams", "defineFuncParamsList", 
		"passFuncParams", "passFuncParamsList", "structField", "varDef", "statement", 
		"expression", "type"
	};

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public Program ast;
		public GlobalContext global;
		public List<GlobalContext> lg = new ArrayList<GlobalContext>();
		public GlobalContext global(int i) {
			return getRuleContext(GlobalContext.class,i);
		}
		public List<GlobalContext> global() {
			return getRuleContexts(GlobalContext.class);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__16) | (1L << T__1) | (1L << IDENT))) != 0)) {
				{
				{
				setState(24); ((StartContext)_localctx).global = global();
				((StartContext)_localctx).lg.add(((StartContext)_localctx).global);
				}
				}
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			((StartContext)_localctx).ast = new Program(((StartContext)_localctx).lg);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalContext extends ParserRuleContext {
		public Global ast;
		public Token name;
		public StructFieldContext structField;
		public List<StructFieldContext> lsd = new ArrayList<StructFieldContext>();
		public VarDefContext varDef;
		public FuncContext func;
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public StructFieldContext structField(int i) {
			return getRuleContext(StructFieldContext.class,i);
		}
		public List<StructFieldContext> structField() {
			return getRuleContexts(StructFieldContext.class);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public VarDefContext varDef() {
			return getRuleContext(VarDefContext.class,0);
		}
		public GlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterGlobal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitGlobal(this);
		}
	}

	public final GlobalContext global() throws RecognitionException {
		GlobalContext _localctx = new GlobalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_global);
		int _la;
		try {
			setState(50);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(32); match(T__1);
				setState(33); ((GlobalContext)_localctx).name = match(IDENT);
				setState(34); match(T__29);
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IDENT) {
					{
					{
					setState(35); ((GlobalContext)_localctx).structField = structField();
					((GlobalContext)_localctx).lsd.add(((GlobalContext)_localctx).structField);
					}
					}
					setState(40);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(41); match(T__26);
				setState(42); match(T__30);
				((GlobalContext)_localctx).ast =  new Struct(((GlobalContext)_localctx).name,((GlobalContext)_localctx).lsd);
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 2);
				{
				setState(44); ((GlobalContext)_localctx).varDef = varDef();
				((GlobalContext)_localctx).ast = ((GlobalContext)_localctx).varDef.ast;
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(47); ((GlobalContext)_localctx).func = func();
				((GlobalContext)_localctx).ast = ((GlobalContext)_localctx).func.ast;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public Global ast;
		public Token name;
		public DefineFuncParamsContext lp;
		public TypeContext type;
		public VarDefContext varDef;
		public List<VarDefContext> lvd = new ArrayList<VarDefContext>();
		public StatementContext statement;
		public List<StatementContext> ls = new ArrayList<StatementContext>();
		public DefineFuncParamsContext defineFuncParams() {
			return getRuleContext(DefineFuncParamsContext.class,0);
		}
		public VarDefContext varDef(int i) {
			return getRuleContext(VarDefContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public List<VarDefContext> varDef() {
			return getRuleContexts(VarDefContext.class);
		}
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitFunc(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_func);
		int _la;
		try {
			setState(94);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(52); ((FuncContext)_localctx).name = match(IDENT);
				setState(53); match(T__20);
				setState(54); ((FuncContext)_localctx).lp = defineFuncParams();
				setState(55); match(T__3);
				setState(56); match(T__14);
				setState(57); ((FuncContext)_localctx).type = type();
				setState(58); match(T__29);
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__16) {
					{
					{
					setState(59); ((FuncContext)_localctx).varDef = varDef();
					((FuncContext)_localctx).lvd.add(((FuncContext)_localctx).varDef);
					}
					}
					setState(64);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__35) | (1L << T__31) | (1L << T__25) | (1L << T__23) | (1L << T__21) | (1L << T__20) | (1L << T__15) | (1L << T__10) | (1L << T__7) | (1L << T__4) | (1L << INT) | (1L << FLOAT) | (1L << IDENT) | (1L << CHAR))) != 0)) {
					{
					{
					setState(65); ((FuncContext)_localctx).statement = statement();
					((FuncContext)_localctx).ls.add(((FuncContext)_localctx).statement);
					}
					}
					setState(70);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(71); match(T__26);
				((FuncContext)_localctx).ast = new Func(((FuncContext)_localctx).name,((FuncContext)_localctx).lp.ast,((FuncContext)_localctx).type.ast,((FuncContext)_localctx).lvd, ((FuncContext)_localctx).ls);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(74); ((FuncContext)_localctx).name = match(IDENT);
				setState(75); match(T__20);
				setState(76); ((FuncContext)_localctx).lp = defineFuncParams();
				setState(77); match(T__3);
				setState(78); match(T__29);
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__16) {
					{
					{
					setState(79); ((FuncContext)_localctx).varDef = varDef();
					((FuncContext)_localctx).lvd.add(((FuncContext)_localctx).varDef);
					}
					}
					setState(84);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__35) | (1L << T__31) | (1L << T__25) | (1L << T__23) | (1L << T__21) | (1L << T__20) | (1L << T__15) | (1L << T__10) | (1L << T__7) | (1L << T__4) | (1L << INT) | (1L << FLOAT) | (1L << IDENT) | (1L << CHAR))) != 0)) {
					{
					{
					setState(85); ((FuncContext)_localctx).statement = statement();
					((FuncContext)_localctx).ls.add(((FuncContext)_localctx).statement);
					}
					}
					setState(90);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(91); match(T__26);
				((FuncContext)_localctx).ast = new Func(((FuncContext)_localctx).name,((FuncContext)_localctx).lp.ast,null,((FuncContext)_localctx).lvd, ((FuncContext)_localctx).ls);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineFuncParamsContext extends ParserRuleContext {
		public List<VarDef> ast;
		public DefineFuncParamsListContext defineFuncParamsList;
		public DefineFuncParamsListContext defineFuncParamsList() {
			return getRuleContext(DefineFuncParamsListContext.class,0);
		}
		public DefineFuncParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineFuncParams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterDefineFuncParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitDefineFuncParams(this);
		}
	}

	public final DefineFuncParamsContext defineFuncParams() throws RecognitionException {
		DefineFuncParamsContext _localctx = new DefineFuncParamsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_defineFuncParams);
		try {
			setState(100);
			switch (_input.LA(1)) {
			case IDENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(96); ((DefineFuncParamsContext)_localctx).defineFuncParamsList = defineFuncParamsList();
				((DefineFuncParamsContext)_localctx).ast = ((DefineFuncParamsContext)_localctx).defineFuncParamsList.ast;
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineFuncParamsListContext extends ParserRuleContext {
		public List<VarDef> ast;
		public Token IDENT;
		public TypeContext type;
		public DefineFuncParamsListContext defineFuncParamsList;
		public DefineFuncParamsListContext defineFuncParamsList() {
			return getRuleContext(DefineFuncParamsListContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public DefineFuncParamsListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineFuncParamsList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterDefineFuncParamsList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitDefineFuncParamsList(this);
		}
	}

	public final DefineFuncParamsListContext defineFuncParamsList() throws RecognitionException {
		DefineFuncParamsListContext _localctx = new DefineFuncParamsListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_defineFuncParamsList);
		try {
			setState(114);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(102); ((DefineFuncParamsListContext)_localctx).IDENT = match(IDENT);
				setState(103); match(T__14);
				setState(104); ((DefineFuncParamsListContext)_localctx).type = type();
				setState(105); match(T__18);
				setState(106); ((DefineFuncParamsListContext)_localctx).defineFuncParamsList = defineFuncParamsList();
				_localctx.ast.add(new VarDef(((DefineFuncParamsListContext)_localctx).IDENT,((DefineFuncParamsListContext)_localctx).type.ast));
					_localctx.ast.addAll(_localctx.ast);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(109); ((DefineFuncParamsListContext)_localctx).IDENT = match(IDENT);
				setState(110); match(T__14);
				setState(111); ((DefineFuncParamsListContext)_localctx).type = type();
				_localctx.ast.add(new VarDef(((DefineFuncParamsListContext)_localctx).IDENT,((DefineFuncParamsListContext)_localctx).type.ast));
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PassFuncParamsContext extends ParserRuleContext {
		public List<Expression> ast;
		public PassFuncParamsListContext passFuncParamsList;
		public PassFuncParamsListContext passFuncParamsList() {
			return getRuleContext(PassFuncParamsListContext.class,0);
		}
		public PassFuncParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_passFuncParams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterPassFuncParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitPassFuncParams(this);
		}
	}

	public final PassFuncParamsContext passFuncParams() throws RecognitionException {
		PassFuncParamsContext _localctx = new PassFuncParamsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_passFuncParams);
		try {
			setState(120);
			switch (_input.LA(1)) {
			case T__20:
			case T__10:
			case T__7:
			case INT:
			case FLOAT:
			case IDENT:
			case CHAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(116); ((PassFuncParamsContext)_localctx).passFuncParamsList = passFuncParamsList();
				((PassFuncParamsContext)_localctx).ast = ((PassFuncParamsContext)_localctx).passFuncParamsList.ast;
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PassFuncParamsListContext extends ParserRuleContext {
		public List<Expression> ast;
		public ExpressionContext expression;
		public PassFuncParamsContext passFuncParams;
		public PassFuncParamsContext passFuncParams() {
			return getRuleContext(PassFuncParamsContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PassFuncParamsListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_passFuncParamsList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterPassFuncParamsList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitPassFuncParamsList(this);
		}
	}

	public final PassFuncParamsListContext passFuncParamsList() throws RecognitionException {
		PassFuncParamsListContext _localctx = new PassFuncParamsListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_passFuncParamsList);
		try {
			setState(130);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(122); ((PassFuncParamsListContext)_localctx).expression = expression(0);
				setState(123); match(T__18);
				setState(124); ((PassFuncParamsListContext)_localctx).passFuncParams = passFuncParams();
				_localctx.ast.add(((PassFuncParamsListContext)_localctx).expression.ast);
					_localctx.ast.addAll(((PassFuncParamsListContext)_localctx).passFuncParams.ast);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(127); ((PassFuncParamsListContext)_localctx).expression = expression(0);
				_localctx.ast.add(((PassFuncParamsListContext)_localctx).expression.ast);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructFieldContext extends ParserRuleContext {
		public StructField ast;
		public Token name;
		public TypeContext type;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public StructFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterStructField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitStructField(this);
		}
	}

	public final StructFieldContext structField() throws RecognitionException {
		StructFieldContext _localctx = new StructFieldContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_structField);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132); ((StructFieldContext)_localctx).name = match(IDENT);
			setState(133); match(T__14);
			setState(134); ((StructFieldContext)_localctx).type = type();
			setState(135); match(T__30);
			((StructFieldContext)_localctx).ast =  new StructField(((StructFieldContext)_localctx).name,((StructFieldContext)_localctx).type.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDefContext extends ParserRuleContext {
		public VarDef ast;
		public Token name;
		public TypeContext type;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public VarDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterVarDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitVarDef(this);
		}
	}

	public final VarDefContext varDef() throws RecognitionException {
		VarDefContext _localctx = new VarDefContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_varDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138); match(T__16);
			setState(139); ((VarDefContext)_localctx).name = match(IDENT);
			setState(140); match(T__14);
			setState(141); ((VarDefContext)_localctx).type = type();
			setState(142); match(T__30);
			((VarDefContext)_localctx).ast =  new VarDef(((VarDefContext)_localctx).name,((VarDefContext)_localctx).type.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Statement ast;
		public ExpressionContext assigned;
		public ExpressionContext value;
		public ExpressionContext returned;
		public Token print;
		public ExpressionContext printed;
		public Token IDENT;
		public PassFuncParamsContext parameters;
		public ExpressionContext into;
		public ExpressionContext condition;
		public StatementContext statement;
		public List<StatementContext> ifBody = new ArrayList<StatementContext>();
		public List<StatementContext> elseBody = new ArrayList<StatementContext>();
		public List<StatementContext> body = new ArrayList<StatementContext>();
		public PassFuncParamsContext passFuncParams() {
			return getRuleContext(PassFuncParamsContext.class,0);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitStatement(this);
		}
	}
